network-policy/1.default_deny_in_default_namespace.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    ports:
     - port: 53
       protocol: TCP
     - port: 53
       protocol: UDP
